[package]
authors = ["Evgenii P. <eupn@protonmail.com>"]
name = "tracksb"
description = "A firmware for skateboard tracker board"
edition = "2018"
version = "0.1.0"

[dependencies]
axp173 = "0.1"
bno080 = { path = "../../bno080" }
cortex-m = { version = "0.6.4" }
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5"
defmt = "0.1.2"
defmt-rtt = "0.1.0"
#embedded-hal = "1.0.0-alpha.4"
panic-probe = { version = "0.1.0", features = ["print-defmt"] }
stm32wb-hal = { path = "../../stm32wb-hal", default-features = false, features = ["rt", "stm32-usbd", "xG-package"] }
usb-device = "0.2"
usbd-serial = "0.1.0"

# TODO: update to 1.0
[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[features]
# set logging levels here
default = [
  "defmt-default",
  # "dependency-a/defmt-trace",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
