[package]
authors = ["Evgenii P. <eupn@protonmail.com>"]
name = "tracksb"
description = "A firmware for skateboard tracker board"
edition = "2018"
version = "0.1.0"

[dependencies]
axp173 = "0.1"
bno080 = { git = "https://github.com/eupn/bno080.git" }
bbqueue             = "0.4.12"
bluetooth-hci       = { version = "0.1.0" }
embassy = { git = "https://github.com/eupn/embassy.git", branch = "add-stm32wb55" }
embassy-stm32wb55 = { git = "https://github.com/eupn/embassy.git", branch = "add-stm32wb55", features = ["55"] }
stm32wb55           = { git = "https://github.com/eupn/stm32wb55.git" }
cortex-m = { version = "0.6.4" }
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5"
defmt = "0.1.2"
defmt-rtt = "0.1.0"
#embedded-hal = "1.0.0-alpha.4"
nb                  = "1.0"
panic-probe = { version = "0.1.0", features = ["print-defmt"] }
panic-reset = "0.1.0"
stm32wb-hal         = { version = "0.1.3", features = ["rt", "xG-package", "stm32-usbd"] }
usb-device = "0.2"
usbd-serial = "0.1.0"

# TODO: update to 1.0
[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[features]
# set logging levels here
default = [
  "defmt-default",
  # "dependency-a/defmt-trace",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
