[package]
authors = ["Evgenii P. <eupn@protonmail.com>"]
name = "tracksb"
description = "A firmware for skateboard tracker board"
edition = "2018"
version = "0.1.1"

[dependencies]
heapless = "0.6"
async-embedded-traits = "0.1"
axp173 = { git = "https://github.com/eupn/axp173-rs.git", branch = "async-api" }
bno080 = { path = "../../bno080" } #{ git = "https://github.com/eupn/bno080.git" }
bbqueue             = "0.4.12"
bluetooth-hci       = { version = "0.1.0" }
embassy = { path = "../../embassy/embassy" }
embassy-stm32wb55 = { path = "../../embassy/embassy-stm32wb55", features = ["55", "defmt"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
#embassy = { git = "https://github.com/eupn/embassy.git", branch = "add-stm32wb55" }
#embassy-stm32wb55 = { git = "https://github.com/eupn/embassy.git", branch = "add-stm32wb55", features = ["55"] }
stm32wb55           = { git = "https://github.com/eupn/stm32wb55.git" }
cortex-m = { version = "0.6.4" }
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5"
defmt = "0.2"
defmt-rtt = "0.2"
nb = "1.0"
panic-probe = { version = "0.2", features = ["print-defmt"] }
panic-reset = "0.1.0"
stm32wb-hal = { version = "0.1", features = ["rt", "xG-package", "stm32-usbd"] }
usb-device = "0.2"
usbd-serial = "0.1.0"
if_chain = "1.0.1"

# TODO: update to 1.0
[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[features]
# set logging levels here
default = [
  "defmt-default",
  # "embassy-stm32wb55/defmt-debug",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = true # <-
